--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@privy-io/privy-browser": "^0.0.2",
     "@privy-io/privy-node": "^0.0.2",
+    "axios": "^0.27.2",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "fs": "^0.0.1-security",
+    "html-react-parser": "^3.0.1",
     "html-to-draftjs": "^1.5.0",
     "next": "12.2.3",
     "react": "18.2.0",
